[package]
name = "proc-mounts"
version = "0.1.2"
authors = ["Jeremy Soller <jackpot51@gmail.com>", "Michael Aaron Murphy <mmstickman@gmail.com>"]
description = "Fetch active mounts and swaps on a Linux system"
repository = "https://github.com/pop-os/proc-mounts"
readme = "README.md"
license = "MIT"
categories = ["os::unix-apis"]
keywords = ["linux", "proc", "mounts", "swaps"]

[dependencies]
lazy_static = "1.1.0"
partition-identity = "0.2.0"
