[package]
name = "proc-mounts"
version = "0.3.0"
edition = "2021"
description = "Fetch active mounts and swaps on a Linux system"
repository = "https://github.com/pop-os/proc-mounts"
readme = "README.md"
license = "MIT"
categories = ["os::unix-apis"]
keywords = ["linux", "proc", "mounts", "swaps"]

[dependencies]
partition-identity = "0.3.0"
